cabal-version:      3.14
name:               Haskell-Project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             ratteperk
maintainer:         spered2109@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Haskell-Project
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base >=4.14 && <5,
                     gloss >=1.13,
                     random >=1.2,
                     linear >=1.21,
                     unordered-containers >=0.2.19
    default-language: GHC2021