cabal-version:      3.14
name:               Haskell-Project
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             ratteperk
maintainer:         spered2109@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Haskell-Project
  main-is:             Main.hs
  other-modules:       Config
                     Input
                     Logic
                     Pathfinding
                     Rendering
                     Types
  build-depends:       base >=4.14 && <4.19
                     , gloss >=1.13
                     , GLUT >=2.7
                     , random >=1.2 && <1.3
                     , gloss-juicy >=0.1
  hs-source-dirs:      app
  default-language:    Haskell2010